<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wallpafy</string>

    <!-- Home Text -->
    <string name="source">Source :</string>
    <string name="playlist_to_load">Selected playlist :</string>
    <string name="confirm_button">Change my wallpaper</string>

    <!-- Sources -->
    <string name="recently_played">Recently played</string>
    <string name="playlist">Playlist</string>
    <string name="custom">Custom</string>

    <!-- Cover Menu -->
    <string name="delete_cover">Delete</string>
    <string name="use_cover">Use as wallpaper</string>

    <!-- Platform Auth Button -->
    <string name="spotify_button">Log in Spotify</string>
    <string name="more_platform">More platforms incoming …</string>

    <!-- Platform Name -->
    <string name="log_out">Logged out</string>
    <string name="spotify" translatable="false">Spotify</string>

    <!-- Navigation Header -->
    <string name="username_placeholder" translatable="false">@string/log_out</string>

    <!-- Navigation Menu -->
    <string name="manage_accounts">Manage accounts</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- Toast Text -->
    <string name="connection_failed_toast">Failed to connect to the platform. Please check your network connection.</string>
    <string name="platform_access_failed_toast">Failed to access to the platform. Please check your network connection.</string>
    <string name="log_out_toast">Log you in any platform before doing anything</string>
    <string name="wallpaper_list_updated_toast">The wallpaper list has been updated</string>
    <string name="write_cover_failed_toast">Failed to set the wallpaper</string>

    <!-- Log Out Dialog -->
    <string name="log_out_dialog_message">You will be logged out</string>
    <string name="log_out_dialog_title">Log Out</string>
    <string name="log_out_dialog_positive">Continue</string>
    <string name="log_out_dialog_negative">Cancel</string>

    <!-- About Text -->
    <string name="app_version">Version</string>
    <string name="donate">Donate to support Wallpafy development</string>
    <string name="donate_summary_link" translatable="false"><a href="https://www.paypal.com/donate?hosted_button_id=LMZ4P452NVX3N">@string/donate_summary_text</a></string>
    <string name="donate_summary_text">Open PayPal in browser</string>
    <string name="github">Find Wallpafy and give feedback on Github</string>
    <string name="github_summary" translatable="false"><a href="https://github.com/robro-dev/Wallpafy">github.com/robro-dev/Wallpafy</a></string>
    <string name="licence">Licence</string>
    <string name="licence_summary">GNU General Public Licence version 3 or later</string>

    <!-- Preference Title -->
    <string name="other_header">Others</string>

    <!-- Frequency Preference -->
    <string name="wallpaper_frequency_key" translatable="false">wallpaper_frequency</string>
    <string name="wallpaper_frequency_title">"Change wallpaper every "</string>
    <string name="update_frequency_key" translatable="false">update_frequency</string>
    <string name="update_frequency_title">Refresh the wallpaper list every</string>

    <!-- Other Preference -->
    <string name="compilations_key" translatable="false">ignore_compilations</string>
    <string name="compilations_title">Ignore compilations</string>
    <string name="compilations_summary_on">Remove compilations from wallpaper list</string>
    <string name="compilations_summary_off">Keep compilations in wallpaper list</string>

    <!-- Description -->
    <string name="cover_desc">Album Cover</string>
    <string name="nav_header_desc">Nav header profile picture</string>

</resources>
