<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/global_padding"
        tools:context=".fragment.AboutFragment">

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/AboutTitle"
            android:text="@string/app_version" />

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/version_summary"
            style="@style/AboutSummary" />

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/AboutTitle"
            android:text="@string/donate" />

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/AboutSummary"
            android:autoLink="web"
            android:text="@string/donate_summary_link"/>

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/AboutTitle"
            android:text="@string/github" />

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/AboutSummary"
            android:autoLink="web"
            android:text="@string/github_summary" />

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/AboutTitle"
            android:text="@string/licence" />

    <androidx.appcompat.widget.AppCompatTextView
            style="@style/AboutSummary"
            android:text="@string/licence_summary" />

</androidx.appcompat.widget.LinearLayoutCompat>