<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/drawer_accounts">
        <item
                android:id="@+id/accounts_fragment"
                android:icon="@drawable/ic_account_circle_grey_400_36dp"
                android:title="@string/manage_accounts" />
    </group>

    <group android:id="@+id/drawer_settings">
        <item
                android:id="@+id/settings_fragment"
                android:icon="@drawable/ic_settings_grey_400_36dp"
                android:title="@string/settings" />

        <item
                android:id="@+id/about_fragment"
                android:icon="@drawable/ic_info_outline_grey_400_36dp"
                android:title="@string/about" />
    </group>

</menu>