<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nav_graph"
        app:startDestination="@id/home_fragment">
    <fragment
            android:id="@+id/home_fragment"
            android:name="com.robro.wallpafy.fragment.HomeFragment"
            android:label="@string/app_name"
            tools:layout="@layout/layout_fragment_home">
        <action
                android:id="@+id/action_home_fragment_to_accounts_fragment"
                app:destination="@id/accounts_fragment"
                app:launchSingleTop="true" />
        <action
                android:id="@+id/action_home_fragment_to_about_fragment"
                app:destination="@id/about_fragment"
                app:launchSingleTop="true" />
        <action
                android:id="@+id/action_home_fragment_to_settings_fragment"
                app:destination="@id/settings_fragment"
                app:launchSingleTop="true" />
    </fragment>
    <fragment
            android:id="@+id/settings_fragment"
            android:name="com.robro.wallpafy.fragment.SettingsFragment"
            android:label="@string/settings"
            tools:layout="@xml/fragment_settings" />
    <fragment
            android:id="@+id/accounts_fragment"
            android:name="com.robro.wallpafy.fragment.AccountsFragment"
            android:label="@string/manage_accounts"
            tools:layout="@layout/layout_fragment_accounts">
        <action
                android:id="@+id/action_accounts_fragment_to_home_fragment"
                app:destination="@id/home_fragment"
                app:launchSingleTop="true" />
    </fragment>
    <fragment
            android:id="@+id/about_fragment"
            android:name="com.robro.wallpafy.fragment.AboutFragment"
            android:label="@string/about"
            tools:layout="@layout/layout_fragment_about" />
</navigation>