<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragment.HomeFragment">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/source_text"
            style="@style/HomeText"
            android:text="@string/source"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/source_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/source_text" />

    <!-- Menu according to the source -->

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/source_parameter_text"
            style="@style/HomeText"
            android:text="@string/playlist_to_load"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/source_spinner" />

    <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/source_parameter_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/source_parameter_text" />

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/match_constraints"
            android:layout_marginHorizontal="@dimen/default_horizontal_margin"
            android:layout_marginTop="@dimen/default_vertical_margin"
            app:layout_constraintBottom_toTopOf="@id/confirm_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/source_parameter_spinner">


        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/preview_grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_border"
                android:scrollbars="horizontal" />

        <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/preview_progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

    </FrameLayout>


    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_vertical_margin"
            android:text="@string/confirm_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>